--- a/src/sample/view.fxml
+++ b/src/sample/view.fxml
@@ -5,17 +5,17 @@
 <?import javafx.scene.layout.*?>
 
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="660.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="660.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
-      <Button layoutX="30.0" layoutY="30.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="Start" />
-      <Button layoutX="160.0" layoutY="30.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="Reset" />
-      <Button layoutX="30.0" layoutY="90.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" />
-      <Button layoutX="60.0" layoutY="90.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" />
-      <Button layoutX="90.0" layoutY="90.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" />
-      <Button layoutX="120.0" layoutY="90.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" />
-      <Button layoutX="150.0" layoutY="90.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" />
-      <Button layoutX="180.0" layoutY="90.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" />
-      <Button layoutX="210.0" layoutY="90.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" />
+      <Button fx:id="startButton" layoutX="30.0" layoutY="30.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="Start" />
+      <Button fx:id="resetButton" layoutX="160.0" layoutY="30.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="Reset" />
+      <Button fx:id="fieldButton00" layoutX="30.0" layoutY="90.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" />
+      <Button fx:id="fieldButton01" layoutX="60.0" layoutY="90.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" />
+      <Button fx:id="fieldButton02" layoutX="90.0" layoutY="90.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" />
+      <Button fx:id="fieldButton03" layoutX="120.0" layoutY="90.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" />
+      <Button fx:id="fieldButton04" layoutX="150.0" layoutY="90.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" />
+      <Button fx:id="fieldButton05" layoutX="180.0" layoutY="90.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" />
+      <Button fx:id="fieldButton06" layoutX="210.0" layoutY="90.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" />
       <Button layoutX="240.0" layoutY="90.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" />
       <Button layoutX="270.0" layoutY="90.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" />
       <Button layoutX="300.0" layoutY="90.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" />
